--- a/src/styles/global/style.css
+++ b/src/styles/global/style.css
@@ -2,11 +2,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* height: 100%; */
 }
 
 body{
   background: #e6ecf0;
   font-family: "Helvetica Nue","Helvetica", Arial, Helvetica, sans-serif;
   text-rendering: optimizeLegibility ;
-  background: red;
+
 }
+
+div#content{
+  max-width: 1100px;
+  margin: 0 auto;
+  /* background: red; */
+
+}
+
