--- a/src/components/content/styles.css
+++ b/src/components/content/styles.css
@@ -1,12 +1,14 @@
 div.nav{
   max-width: 1100px;
   margin: 0 auto;
-
+  z-index: 1000;
+  position: relative;
 }
 
 .nav-container{
   display: flex;
   justify-content: space-between;
+  position: fixed;
 }
 /* form#example{
   margin:0 auto;
@@ -21,9 +23,19 @@ dev.ative{
   opacity: 0.1;
   width: 100%;
 } */
-
+.mxo{
+  /* margin-top:40px; */
+  margin: 45px auto;
+  max-width: 880px;
+  width: 800px;
+  height: 10px;
+  background-color: white;
+  border-radius: 0.1rem;
+}
 
 .modal-container {
+  display: flex;
+  justify-content: center;
   position: fixed;
   top: 0;
   right: 0;
@@ -39,17 +51,72 @@ dev.ative{
 .modal {
   margin: 45px auto;
   max-width: 880px;
-  width: 800px;
-  height:  500px;
-  background-color: white;
-  border-radius: 0.1rem;
+  width: 870px;
+  /* height:  500px; */
+  /* background-color: white; */
+  /* border-radius: 0.1rem; */
 }
 
 .modal-header,
 .modal-content {
- padding: 10px;
+ /* padding: 10px; */
 }
 .modal-container:target {
   opacity: 1;
   pointer-events: all;
+}
+/* INPUT*/
+
+@media screen and (min-width:80rem){
+  input.input {
+    max-width: 20rem;
+  }
+}
+@media screen and (min-width: 48em){
+input.input {
+  max-width: 20rem;
+}
+}
+
+@media screen and (min-width: 30em){
+  input.input {
+   display: flex;
+  }
+}
+
+input.input {
+  display: flex;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  border-width: 1px;
+  height: 2.5rem;
+  padding-inline-start:0.75rem;
+  padding-inline-end: 0.75rem;
+  line-height: 1px;
+  width: 100%;
+  border-radius: 0.375rem;
+  background: #f4f6f8;
+  margin-right: 0.5rem;
+ 
+ }
+ input.icon{
+  background: url(../../../assets/icons8-search.svg) no-repeat left;
+  padding-left:46px;
+  background-size: 40px;
+ }
+ button, [role="button"]{
+   cursor: pointer;
+ }
+
+ *, *::before, ::after{
+  border-color:  #DEE2E7;
+  word-wrap: break-word;
+ }
+ button, input, optgroup, select, textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+
 }
