--- a/src/styles/global/style.css
+++ b/src/styles/global/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -7,7 +8,7 @@
 
 body{
   background: #e6ecf0;
-  font-family: "Helvetica Nue","Helvetica", Arial, Helvetica, sans-serif;
+  font-family: 'Roboto',"Helvetica Nue","Helvetica", Arial, Helvetica, sans-serif;
   text-rendering: optimizeLegibility ;
 
 }
